Update for deploy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "benloopproject",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://benbuaron1.github.io/BenLoopProject",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
